--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "test": "gulp build:production && karma start --single-run",
     "watch": "gulp"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-core": "^5.8.3",
     "babel-loader": "^5.3.2",
     "browser-sync": "^2.8.0",
     "compression": "^1.5.1",
+    "d": "^0.1.1",
     "del": "^1.2.0",
+    "es5-ext": "^0.10.7",
+    "es6-weak-map": "^1.0.2",
+    "event-emitter": "^0.3.3",
     "express": "^4.13.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
@@ -36,6 +39,7 @@
     "gulp-iconfont": "^3.0.3",
     "gulp-if": "~1.2.5",
     "gulp-imagemin": "^2.3.0",
+    "gulp-less": "^3.0.3",
     "gulp-minify-css": "^1.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-nunjucks-render": "^0.2.1",
