--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.3.5",
-    "fontawesome": "~4.4.0"
+    "fontawesome": "~4.4.0",
+    "bootstrap-sass-official": "~3.3.5"
   }
 }
