--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.13.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-bower": "0.0.10",
     "gulp-changed": "^1.2.1",
     "gulp-filesize": "0.0.6",
     "gulp-filter": "^2.0.2",
@@ -46,6 +47,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^5.1.0",
     "gulp-rev-replace": "^0.4.2",
+    "gulp-ruby-sass": "^1.2.0",
     "gulp-sass": "^2.0.4",
     "gulp-sequence": "^0.4.0",
     "gulp-sizereport": "^1.1.2",
@@ -72,5 +74,12 @@
     "require-dir": "^0.3.0",
     "vinyl-source-stream": "~1.1.0",
     "webpack": "^1.10.1"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/greypants/gulp-starter/issues"
+  },
+  "homepage": "https://github.com/greypants/gulp-starter#readme",
+  "main": "gulpfile.js",
+  "author": "",
+  "license": "ISC"
 }
