--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "babel-core": "^5.8.3",
     "babel-loader": "^5.3.2",
+    "bootstrap": "^3.3.5",
     "browser-sync": "^2.8.0",
     "compression": "^1.5.1",
     "d": "^0.1.1",
@@ -29,6 +30,7 @@
     "es6-weak-map": "^1.0.2",
     "event-emitter": "^0.3.3",
     "express": "^4.13.1",
+    "font-awesome": "^4.4.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-bower": "0.0.10",
@@ -56,6 +58,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.3",
+    "jquery": "^2.1.4",
     "karma": "0.13.2",
     "karma-chrome-launcher": "^0.2.0",
     "karma-cli": "0.1.0",
