--- a/bower.json
+++ b/bower.json
@@ -30,5 +30,8 @@
     "bootstrap-sass-official": "~3.3.5",
     "fontawesome": "~4.4.0",
     "select2": "~4.0.0"
+  },
+  "devDependencies": {
+    "font-awesome": "~4.4.0"
   }
 }
