--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: node_js
-env: TRAVIS_CI=true
 node_js:
   - "0.12"
 before_script:
+  - npm install -g codeclimate-test-reporter
   # http://docs.travis-ci.com/user/gui-and-headless-browsers/#Using-xvfb-to-Run-Tests-That-Require-GUI-(e.g.-a-Web-browser)
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+
+after_script:
+  - codeclimate-test-reporter < lcov.info
+
+env: CODECLIMATE_REPO_TOKEN=ab41750ce1ea61e4d945648ecf0eba112201aad153922827bc85e2a004eca70b
